--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,41 @@
+/* Color Theme */
+
+:root{
+    --main-color: #FFF;
+    --bg-color: #151515;
+    /* --box-shadow: rgba(0, 0, 0, .3); */
+    --box-shadow: rgba(255, 255, 255, .3);
+    --loader-bg: #F1F1F1;
+}
+
 body{
     scroll-behavior: smooth;
     position: relative;
+    height: 100%;
+    color: var(--main-color);
+    background-color: var(--bg-color);
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://source.unsplash.com/1600x900/?finance,fraud'); */
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-attachment: fixed;
+    background-position: 50% 50%; 
 }
+
+/* Making all tags accessible */
+
+h1, h2, h3, h4, h5, h6, p, a, button, form, .footer, ul, li, text{
+    position: relative;
+    z-index: 5;
+}
+
+/* Header content */
+
 .img-container{
-    background-color: #FFF;
+    background-color: var(--main-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 10px var(--box-shadow);
     height: 15vh;
     position: sticky;
     top: 0;
@@ -20,14 +48,47 @@ body{
     padding: 15px;
 }
 
+/* Main page content */
+
+    /* Main Text Design */
+.patterns {
+    height: 100%;
+    width: 100vw;
+    margin-bottom: -430px;
+}
+  
+svg text {
+    font-family: Lora;
+    letter-spacing: 10px;
+    stroke: #00BBF9;
+    font-size: 200px;
+    font-weight: 700;
+    stroke-width: 3;
+    animation: textAnimate 5s infinite alternate;
+}
+  
+@keyframes textAnimate {
+    0% {
+        stroke-dasharray: 0 50%;
+        stroke-dashoffset:  20%;
+        fill:rgba(255, 255, 255, 1);
+    }
+
+    100% {
+        stroke-dasharray: 50% 0;
+        stroke-dashoffstet: -20%;
+        fill: rgba(148, 222, 235, 0)
+    }
+}
+    /* Main Text Design Ends */
+
 .main-heading h1, .main-heading h2, .main-heading p, .main-heading a{
-    color: #FFF;
+    color: var(--main-color);
     text-align: center;
 }
 
-
 .main-heading{
-    color: #FFF;
+    color: var(--main-color);
     height: 85vh;
     display: flex;
     justify-content: center;
@@ -46,9 +107,8 @@ body{
     color: #00BBF9;
 }
 
-.main-heading .btn, .main-heading form, .main-heading h1, .main-heading h2{
-    z-index: 5;
-}
+
+/* Story page content */
 
 .story-box p, .question-box .form-label{
     text-align: justify;
@@ -57,6 +117,8 @@ body{
 .story-box{
     height: 50%;
 }
+
+/* Question page content */
 
 .quest{
     display: flex;
@@ -67,14 +129,23 @@ body{
     width: 80%;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 10px var(--box-shadow);
 }
+
+textarea.form-control, textarea.form-control:focus{
+    background: transparent;
+    color: #FFF;
+  }
+
+/* Footer content */
 
 .footer, .footer .foot-links{
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+
+/* Responsive Design */
 
 @media (max-width: 575.98px) {
     .footer{
@@ -85,8 +156,7 @@ body{
     }
 }
 
-
-/* LOADER STYLE */
+/* Loader Design */
 
 #loader {
     overflow: hidden;
@@ -96,7 +166,8 @@ body{
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #F5F5F5;
+    /* background-color: var(--loader-bg); */
+    background-color: #000;
 }
 .clock-loader {
     --clock-color: #00BBF9;
@@ -143,17 +214,18 @@ body{
         transform: rotate(1turn);
     }
 }
-  
 
-/* Particle JS */
+
+/* Particles JS */
 #particles-js{ 
-    position: absolute; 
-    /* bottom: 0; */
-    /* z-index: -1; */
-    width: 100vw; 
-    height: 100vh; 
-    background-color: transparent; 
+    position: fixed; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://source.unsplash.com/1600x900/?finance,fraud'); */
     background-repeat: no-repeat; 
     background-size: cover; 
     background-position: 50% 50%; 
-}     
+}
+
