--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,7 @@
 :root{
     --main-color: #FFF;
     --bg-color: #151515;
-    /* --box-shadow: rgba(0, 0, 0, .3); */
     --box-shadow: rgba(255, 255, 255, .3);
-    --loader-bg: #F1F1F1;
 }
 
 body{
@@ -14,11 +12,14 @@ body{
     height: 100%;
     color: var(--main-color);
     background-color: var(--bg-color);
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://source.unsplash.com/1600x900/?finance,fraud'); */
     background-repeat: no-repeat; 
     background-size: cover; 
     background-attachment: fixed;
     background-position: 50% 50%; 
+    scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 /* Making all tags accessible */
@@ -161,7 +162,6 @@ svg text {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* background-color: var(--loader-bg); */
     background-color: #000;
 }
 .clock-loader {
@@ -218,9 +218,5 @@ svg text {
     top: 0;
     width: 100%; 
     height: 100%; 
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://source.unsplash.com/1600x900/?finance,fraud'); */
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    background-position: 50% 50%; 
 }
 
