--- a/style/style.css
+++ b/style/style.css
@@ -51,11 +51,11 @@ h1, h2, h3, h4, h5, h6, p, a, button, form, .footer, ul, li, text{
 
 /* Main page content */
 
-    /* Main Text Design */
+/* Main Text Design */
 .patterns {
-    height: 100%;
+    height: 35vh;
     width: 100vw;
-    margin-bottom: -430px;
+    position: relative;
 }
   
 svg text {
@@ -92,9 +92,14 @@ svg text {
     color: var(--main-color);
     height: 85vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
+}
+.inner-data{
+    margin-top: -200px;
+    height: 40vh; 
+    width: 100vw;
 }
 
 .main-heading h1{
